--- a/app/views/book/booking.erb
+++ b/app/views/book/booking.erb
@@ -63,10 +63,14 @@
         <div class="col-lg-10">
           <div style="overflow:auto; width:500px; font-size: 18px;" id="menu_font">
            <br>사용약관입니다.<br>
-            [1] 기물파손이나 낙서 등의 피해가 확인되었을 경우에는 불이익이 적용됩니다. <br>
-            [2]<br>
-            [3]<br>
-            [4]<br>
+           <br>1. 강의실에서는 간단한 다과 이외의 주류, 외부 음식물은 반입할 수 없습니다. 
+           <br>2. 쓰레기는 강의실에서 나가실 때 가지고 나가셔야 합니다.
+           <br>3. 사용하신 PC는 반드시 끄셔야 합니다. 
+           <br>4. 강의실에 아무도 없을 경우 강의실 불은 반드시 꺼주시기 바랍니다.
+           <br>5. PC가 있는 강의실에는 게임이나 온갖 툴바, 다운로더를 설치하실 수 없습니다.
+           <br>6. 기물파손이나 낙서 등의 피해가 확인되었을 경우에는 불이익이 적용됩니다.
+           <br>7. 소음, 음주, 사행성 등 불건전한 행위 적발시 즉시 퇴실 조치 합니다.
+           <br>8. 퇴실 시 두고가는 물건 없는지 확인하시기 바랍니다. 분실물에 대해서는 책임지지 않으며, 분실물 발견 후 1주일내에 연락이 없으시면 폐기 처리합니다.
             <br><br>
             
           </div><br><br>
