--- a/app/views/freeboard/upload.erb
+++ b/app/views/freeboard/upload.erb
@@ -18,10 +18,10 @@
     
     <br><br>
     <div style="text-align: center; font-size: 20px;" id="menu_font">제목</div> 
-    <input type="text" name="user_title" placeholder="Title"  style="font-size: 18px; height: 40px;" id="menu_font_t">
+    <input type="text" name="user_title" placeholder="Title"  style="font-size: 18px; height: 40px;" id="menu_font_t" required>
     <br><br><br>
     <div style="text-align: center; font-size: 20px;" id="menu_font">내용</div> 
-    <textarea name="user_content" placeholder="Content" rows="20" cols="70"   style="font-size: 18px;" id="menu_font_t"></textarea>
+    <textarea name="user_content" placeholder="Content" rows="20" cols="70"   style="font-size: 18px;" id="menu_font_t" required></textarea>
     <br><br>
     <!--<input type="hidden" name="user_name" value="%= current_user.student_name %>">-->
     <!--<input type="hidden" name="user_major" value="<%#= current_user.major %>">-->
