--- a/app/views/book/tip.erb
+++ b/app/views/book/tip.erb
@@ -8,14 +8,12 @@
   
   <div class="col-md-4">
     <div class="thumbnail"> 
-      <img src="http://foto-chohyejin.c9.io/img/g.png" width = "242px" height = "200px" alt="...">
+      <img src="http://khu-p-chohyejin.c9.io/make/엄혜선.jpg" width = "242px" height = "200px" alt="...">
       <div class="caption">
       <center>
-        <h3>김길동</h3>
-        <p>평택대학교 </p>
-        <p>정보통신학과 123456789</p>
-        <p> 한마디 : 팟팅!</p>
-        <p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>
+        <h3 id="menu_font">엄혜선</h3>
+        <p id="menu_font" style="font-size: 18px;">평택대학교<br>정보통신학과 2012351024</p>
+        <!--<p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>-->
       </center>
       </div>
     </div>
@@ -23,14 +21,12 @@
   
     <div class="col-md-4">
     <div class="thumbnail"> 
-      <img src="http://foto-chohyejin.c9.io/img/g.png" width = "242px" height = "200px" alt="...">
+      <img src="http://khu-p-chohyejin.c9.io/make/조혜진.jpg" width = "242px" height = "200px" alt="...">
       <div class="caption">
       <center>
-        <h3>김길동</h3>
-        <p>평택대학교 </p>
-        <p>정보통신학과 123456789</p>
-        <p> 한마디 : 팟팅!</p>
-        <p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>
+        <h3 id="menu_font">조혜진</h3>
+        <p  id="menu_font" style="font-size: 18px;">평택대학교<br>정보통신학과 123456789</p>
+        <!--<p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>-->
       </center>
       </div>
     </div>
@@ -38,14 +34,12 @@
   
     <div class="col-md-4">
     <div class="thumbnail"> 
-      <img src="http://foto-chohyejin.c9.io/img/g.png" width = "242px" height = "200px" alt="...">
+      <img src="http://khu-p-chohyejin.c9.io/make/박지연.jpg" width = "242px" height = "200px" alt="...">
       <div class="caption">
       <center>
-        <h3>김길동</h3>
-        <p>평택대학교 </p>
-        <p>정보통신학과 123456789</p>
-        <p> 한마디 : 팟팅!</p>
-        <p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>
+        <h3 id="menu_font">박지연</h3>
+        <p  id="menu_font" style="font-size: 18px;">평택대학교<br>정보통신학과 2013351020</p>
+        <!--<p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>-->
       </center>
       </div>
     </div>
@@ -53,14 +47,12 @@
   
     <div class="col-md-4">
     <div class="thumbnail"> 
-      <img src="http://foto-chohyejin.c9.io/img/g.png" width = "242px" height = "200px" alt="...">
+      <img src="http://khu-p-chohyejin.c9.io/make/이태진.jpg" width = "242px" height = "200px" alt="...">
       <div class="caption">
       <center>
-        <h3>김길동</h3>
-        <p>평택대학교 </p>
-        <p>정보통신학과 123456789</p>
-        <p> 한마디 : 팟팅!</p>
-        <p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>
+        <h3 id="menu_font">이태진</h3>
+        <p  id="menu_font" style="font-size: 18px;">평택대학교<br>정보통신학과 2010351034</p>
+        <!--<p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>-->
       </center>
       </div>
     </div>
@@ -68,14 +60,12 @@
   
     <div class="col-md-4">
     <div class="thumbnail"> 
-      <img src="http://foto-chohyejin.c9.io/img/g.png" width = "242px" height = "200px" alt="...">
+      <img src="http://khu-p-chohyejin.c9.io/make/김수한.jpg" width = "242px" height = "200px" alt="...">
       <div class="caption">
       <center>
-        <h3>김길동</h3>
-        <p>평택대학교 </p>
-        <p>정보통신학과 123456789</p>
-        <p> 한마디 : 팟팅!</p>
-        <p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>
+        <h3 id="menu_font">김수한</h3>
+        <p  id="menu_font" style="font-size: 18px;">평택대학교<br>정보통신학과 2010351005</p>
+        <!--<p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>-->
       </center>
       </div>
     </div>
@@ -83,15 +73,13 @@
   
     <div class="col-md-4">
     <div class="thumbnail"> 
-      <img src="http://foto-chohyejin.c9.io/img/g.png" width = "242px" height = "200px" alt="...">
+      <img src="http://khu-p-chohyejin.c9.io/make/박상철.jpg" width = "242px" height = "200px" alt="...">
       <div class="caption">
       <center>
-        <h3>김길동</h3>
-        <p>평택대학교 </p>
-        <p>정보통신학과 123456789</p>
-        <p> 한마디 : 팟팅!</p>
-        <p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>
-      </center>
+        <h3 id="menu_font">박상철</h3>
+        <p  id="menu_font" style="font-size: 18px;">평택대학교<br>정보통신학과 2010351013</p>
+      <!--  <p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>-->
+      <!--</center>-->
       </div>
     </div>
   </div>
