--- a/app/views/freeboard/upload_view.erb
+++ b/app/views/freeboard/upload_view.erb
@@ -17,26 +17,28 @@
 
     <div class="container">
    <div class="row">
-     
-        <center>   
-            <div style="text-align: center; font-size: 20px;" id="menu_font"> 제목 </div>
-            <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); align:center; width: 700px; font-size: 18px;" id="menu_font_t">
-               <br><%= @one_fb.fb_title %><br><br>
+         
+        <div class="col-md-2"></div>
+        <div class="col-md-8"> 
+            <div style="font-size: 20px;" id="menu_font"> 제목 </div>
+            <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); align:center; font-size: 18px;" id="menu_font_t">
+               <br>&nbsp;&nbsp;<%= @one_fb.fb_title %><br><br>
             </div><br><br> 
                 
 
           <div style="font-size: 20px;" id="menu_font"> 내용 </div>
-             <pre style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); width: 700px; font-size: 18px;" id="menu_font_t">
+             <pre style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); font-size: 18px;" id="menu_font_t">
               <br><%= @one_fb.fb_content %><br><br> 
-            </pre><br><br>
+            </pre><br>
      
 
             <% if current_user.email == 'admin@ptu.ac.kr' %>
-                <a href="/freeboard/delete?id=<%= @one_fb.id %>"><input type="submit" class="btn btn-primary btn-sm btn pull-right" style=" font-size: 18px;" id="menu_font" value="삭제하기"></a>
+                <a href="/freeboard/delete_action?id=<%= @one_fb.id %>"><input type="submit" class="btn btn-primary btn-sm btn pull-right" style=" font-size: 18px;" id="menu_font" value="삭제하기"></a>
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="/freeboard/modify?id=<%= @one_fb.id %>"><input type="submit" class="btn btn-primary btn-sm btn pull-right" style=" font-size: 18px;" id="menu_font" value="수정하기"></a>
-                       
+                <a href="/freeboard/freeboards"><span style=" font-size: 18px;" id="menu_font">메인으로 가기</span></a>
             <% else %>
+                <a href="/freeboard/freeboards"><span style=" font-size: 18px;" id="menu_font">메인으로 가기</span></a>
             <% end %>
         </center>
       
@@ -73,7 +75,7 @@
                                     (작성자 : <%= current_user.student_name %>)</div>
                                 <% end %><br>
 
-                                <textarea type="text" name="rp_content"  placeholder="댓글을 달아주세요" rows="4" cols="80" style="font-size: 18px;" id="menu_font" id = "writeadmin"></textarea>
+                                <textarea type="text" name="rp_content"  placeholder="댓글을 달아주세요" rows="4" cols="65" style="font-size: 18px;" id="menu_font" id = "writeadmin"></textarea>
                                 <input type="hidden" name="freeboard_id" value="<%= @one_fb.id %>">
                                 <input type="hidden" name="rp_name" value="<%= current_user.student_name %>">
                                 <input type="hidden" name="rp_hakbun" value="<%= current_user.student_number %>"> &nbsp;&nbsp;
@@ -81,8 +83,11 @@
                                
                             <% end %>
                  
+</div>
 
-	<br><br><br><br><br>
+	<div class="col-md-2"></div>
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 </div> 
 </div>
+
+	<br><br><br><br><br>
