--- a/app/views/book/mypage.erb
+++ b/app/views/book/mypage.erb
@@ -70,9 +70,11 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist" id = "menu_font" style = "font-size:20px;">
     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">
-      <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+      <span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;
     Home</a></li>
-    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">나의 문의함</a></li>
+    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">
+    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> &nbsp;
+    나의 문의함</a></li>
     <li role="presentation"><a href="#messages" aria-controls="messagess" role="tab" data-toggle="tab">예약현황</a></li>
   </ul>
 
