--- a/app/views/book/mypage.erb
+++ b/app/views/book/mypage.erb
@@ -87,6 +87,8 @@
       <center>  
       
        <br>
+       
+       <div class = "
         <p style = "font-size:40px;" id = "menu_font"> &nbsp;&nbsp;
         
          My page</p>
