--- a/app/views/book/mypage.erb
+++ b/app/views/book/mypage.erb
@@ -84,11 +84,11 @@
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="home"><!--메인-->
     <br><br>
-      <center>  
-      
        <br>
-       
-       <div class = "
+       <div class = "hi" style="background-image: url(http://khu-p-chohyejin.c9.io/img/boardd.png" width = "200px;" height = "200px">
+        
+      <center>  
+
         <p style = "font-size:40px;" id = "menu_font"> &nbsp;&nbsp;
         
          My page</p>
@@ -104,7 +104,8 @@
         <a href="/users/edit" style="width:30%"class="list-group-item" id = "menu_font_t">회원 정보 수정</a>
       </center>
 
-    </div>
+  </div>
+  </div>
     
 
 
