--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -243,7 +243,7 @@
                                       <td  style="font-size: 18px;" id="menu_font">
                                       <%=f.fb_content.first(30)%>..</td>
                                       <td  style="font-size: 18px;" id="menu_font">
-                                      <%=User.find(f.fb_user_id).student_name%></td>                                    
+                                      <!--<2%=User.find(f.fb_user_id).student_name%></td>                                    -->
                                      
                                   </tr>
                                   
